--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
        
         <input type="text" id="num1" placeholder="Ingrese numero 1" ><br><br>
         <input type="text" id="num2" placeholder="Ingrese numero 2" ><br><br>
-        <input class="ju" type="button" value="Ingresar" onclick="suma();"><h1>RESULTADO</h1>
+        <input class="ju" type="button" value="Ingresar" onclick="suma();">
                 <input type="" id="resp" value=""><h1>CONTADOR</h1>
     </div><</div>
         <input type="text" id="n2" placeholder="posicion" class="d">
         <input type="button" value="BUscar" onclick="busca();" class="buscar">
-        <input type="text" id="res" value="Resultado " class="f">
+        <input type="text" id="res" value="res" class="f">
         </center>
     </form>
 
